--- a/apps/agent-backend/package.json
+++ b/apps/agent-backend/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/multipart": "^8.3.1",
+    "@supabase/supabase-js": "^2.93.3",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "openai": "^4.68.0",
+    "pdf-parse": "1.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@types/pdf-parse": "^1.1.5",
     "nodemon": "^3.1.11",
     "pino-pretty": "^13.1.2",
     "tsx": "^4.19.0",
