--- a/apps/agent-backend/package.json
+++ b/apps/agent-backend/package.json
@@ -14,6 +14,8 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^8.3.1",
     "@supabase/supabase-js": "^2.93.3",
+    "@types/cheerio": "^0.22.35",
+    "cheerio": "^1.2.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "openai": "^4.68.0",
