--- a/apps/agent-backend/package.json
+++ b/apps/agent-backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/multipart": "^8.3.1",
+    "@modelcontextprotocol/sdk": "^1.25.3",
     "@supabase/supabase-js": "^2.93.3",
     "@types/cheerio": "^0.22.35",
     "cheerio": "^1.2.0",
